react-homepage/src/styles/Recipe.css
:root {
	--img-size: 130px;
	--preview-width: 150px;
	--preview-height: 210px;
}
.recipe {
	background: white;
	position: relative;
}
.recipe .title {
	display: flex;
	gap: 3rem;
	align-items: center;
	margin-bottom: 1.5rem;
}
.recipe label {
	color: var(--blue);
	font-size: 0.9rem;
	padding-bottom: 0.4rem;
}

.recipe .disable {
	/* 	opacity: 0.3;
	pointer-events: none; */
	display: none;
}
.recipe .icon {
	font-size: 2rem;
	color: var(--dark-gray);
	cursor: pointer;
	align-self: center;
}
.recipe .icon:hover {
	color: var(--blue);
}
.recipe-preview {
	position: relative;
	padding: 0.5rem;
	margin-right: 0.5rem;
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	min-width: var(--preview-width);
	height: var(--preview-height);
	background: var(--gray);
	border-radius: 4px;
}

.recipe .recipe-preview:hover {
	background: var(--blue);
	color: white;
}
.recipe-preview:hover p {
	color: white;
}
.recipe-preview p {
	font-size: 0.8rem;
	text-align: center;
	padding: 0.2rem;
	color: var(--black);
}
.outer-recipe-container {
	padding: 0.5rem;
	border: 2px solid var(--gray);
	border-radius: 5px;
	margin-top: 1rem;
}
.recipe-preview img {
	min-width: var(--img-size);
	width: var(--img-size);
	height: var(--img-size);
	object-fit: contain;
	border-radius: 0.5rem;
}
.recipe-card {
	width: 700px;
	max-width: 100%;
	min-width: 300px;
	overflow: visible;
	display: flex;
	flex-direction: column;
	z-index: 2;
	background: white;
	padding: 2rem 1rem;
	position: fixed;
	left: 50%;
	top: 50%;
	border-radius: 4px;
	border: 2px solid black;
	transform: translate(-50%, -50%);
	box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
	-webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
}
.recipe-card .top-half {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	padding: 1rem;
}
.recipe-card .top-half img {
	max-width: 50%;
	object-fit: contain;
}
.recipe-card .top-half .ingredients {
	padding-left: 1rem;
	display: flex;
	flex-direction: column;
	font-size: 0.8rem;
	gap: 0.5rem;
}
.recipe-card .top-half .ingredient-line {
	line-height: 1.2rem;
}
.recipe-card .top-half .recipe-name {
	font-weight: bold;
	font-size: 1.2rem;
}

.recipe-card .top-half .recipe-sub {
	display: flex;
	justify-content: space-between;
	padding: 0.5rem 0;
	font-weight: bold;
}
.recipe-card .bottom-half {
	padding-top: 1rem;
}
.recipe-card .btn {
	cursor: pointer;
	color: var(--blue);
	background: none;
	border: 1px solid var(--blue);
	border-radius: 4px;
	outline: none;
	padding: 0.5rem 1rem;
}
.recipe-card .btn:hover {
	color: white;
	background: var(--blue);
}

